--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: npm ci
+    - run: npm ci --include=dev
     - run: npm test
