--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
     "typescript": "^4.8.4",
+    "vitest": "^0.24.3",
     "wrangler": "^2.1.10"
   }
 }
