--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,7 +6,11 @@
     "skipLibCheck": true,
     "target": "ES2020",
     "module": "CommonJS",
-    "lib": ["ES2020"],
-    "types": ["@cloudflare/workers-types"]
+    "lib": [
+      "ES2020"
+    ],
+    "types": [
+      "@cloudflare/workers-types"
+    ]
   }
 }
