--- a/package.json
+++ b/package.json
@@ -2,15 +2,25 @@
   "name": "benmcgarvey.com",
   "version": "1.0.0",
   "scripts": {
-    "dev": "wrangler pages dev ./dist --kv mailbox",
-    "test": "vitest"
+    "dev": "wrangler pages dev --kv mailbox -- npm run start",
+    "build": "npx @11ty/eleventy",
+    "start": "npx @11ty/eleventy --serve --quiet",
+    "debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
+    "benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy"
   },
   "author": "ben mcgarvey",
   "license": "MIT",
   "devDependencies": {
+    "@11ty/eleventy": "^2.0.0",
+    "@11ty/eleventy-img": "^3.0.0",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-bundle": "^1.0.3",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@cloudflare/workers-types": "^3.16.0",
+    "luxon": "^3.2.1",
+    "markdown-it-anchor": "^8.6.6",
     "typescript": "^4.8.4",
-    "vitest": "^0.24.3",
     "wrangler": "^2.1.10"
   }
 }
