--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 .DS_Store
-node_modules
-dist/
+/node_modules
+/dist
+/build
+/.svelte-kit
+/package
 *.vars
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
