--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-.DS_Store
-/node_modules
-/dist
-/build
-/.svelte-kit
-/package
-*.vars
+# build output
+dist/
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
 .env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+.env.production
+
+# macOS-specific files
+.DS_Store
