--- a/package.json
+++ b/package.json
@@ -2,35 +2,17 @@
   "name": "benmcgarvey.com",
   "version": "1.0.0",
   "scripts": {
-    "dev": "wrangler pages dev --kv mailbox -- npm run start",
-    "start": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "start": "wrangler pages dev --kv mailbox -- npm run dev",
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "author": "ben mcgarvey",
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.1",
-    "@sveltejs/kit": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
+    "astro": "^2.0.18",
     "wrangler": "^2.1.10"
-  },
-  "type": "module"
+  }
 }
