--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "author": "ben mcgarvey",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "@astrojs/react": "^2.1.0",
     "@cloudflare/workers-types": "^3.16.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "astro": "^2.0.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.1.0",
     "wrangler": "^2.1.10"
   }
 }
