--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest watch"
   },
   "author": "ben mcgarvey",
   "license": "MIT",
   "dependencies": {
     "@astrojs/react": "^2.1.0",
     "@cloudflare/workers-types": "^3.16.0",
+    "@hyperapp/time": "^1.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.1.2",
+    "hyperapp": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.1.0",
+    "vitest": "^0.30.0",
     "wrangler": "^2.1.10"
   }
 }
