--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@hyperapp/time": "^1.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.150.1",
     "astro": "^2.1.2",
     "hyperapp": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.1.0",
+    "three": "^0.151.3",
     "vitest": "^0.30.0",
     "wrangler": "^2.1.10"
   }
