--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/three": "^0.150.1",
     "astro": "^4.8.6",
     "hyperapp": "^2.0.22",
-    "three": "^0.151.3"
+    "three": "^0.151.3",
+    "vitest": "^1.6.0"
   }
 }
